# phase2_ws

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/lib/pkgconfig/: a_star.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
devel/lib/turtlebot3_example/: turtlebot3_bumper  turtlebot3_illumination  turtlebot3_sonar
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/lib/turtlebot3_slam/: flat_world_imu_node
devel/share/a_star/cmake/: a_starConfig.cmake
devel/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
devel/share/turtlebot3_example/cmake/: turtlebot3_example-msg-extras.cmake  turtlebot3_example-msg-paths.cmake  turtlebot3_exampleConfig.cmake
devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
src/: README.md
src/a_star/launch/: new_world.launch  plan.launch
src/a_star/scripts/: publisher.py  subscriber.py  teleop_template.py
src/a_star/src/: part1.py  planner.py
src/turtlebot_planner/: setup.py
src/turtlebot_planner/launch/: plan.launch
src/turtlebot_planner/src/: planner.py
turtlebot_planner/: CMakeLists.txt  README.md  package.xml  setup.py
turtlebot_planner/launch/: plan.launch
turtlebot_planner/src/turtlebot_planner/: planner.py
(+11 files in other folders)
