<?xml version="1.0"?>
<package format="2">
  <name>project3</name>
  <version>0.0.0</version>
  <description>Project3</description>
  <maintainer email="asagar@umd.edu">Abhinav Sagar</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
